--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,9 +13,37 @@
     <string name="search_field_count_hint">Количество мест</string>
     <string name="search_screen_title">Поиск поездок</string>
     <string name="search_search_button_text">Искать</string>
+
+    <!-- Trip   -->
     <string name="trip_screen_time_out_text">Выезд:</string>
     <string name="trip_screen_time_finish_text">Прибытие</string>
     <string name="trip_screen_1_passanger_text">1 пассажир:</string>
     <string name="trip_screen_count_text">Осталось мест:</string>
     <string name="trip_screen_call_button_text">Позвонить</string>
+
+    <!-- New Trip   -->
+    <string name="new_trip_screen_title">Создать поездку</string>
+    <string name="new_trip_create_button_text">Создать</string>
+    <string name="new_trip_next_button_text">Далее</string>
+    <string name="trip_unauthorized_block_title">Для создания поездки</string>
+    <string name="trip_unauthorized_block_title_continuation">нужно Войти или Зарегистрироваться</string>
+    <string name="registration_button_text">Регистрация</string>
+    <string name="login_button_text">Вход</string>
+    <string name="trip_confirm_route_start_text">Выезд</string>
+    <string name="trip_confirm_date_text">Дата:</string>
+    <string name="trip_confirm_time_text">Время:</string>
+    <string name="trip_confirm_route_time_text">Время в пути</string>
+    <string name="trip_confirm_route_end_text">Прибытие</string>
+    <string name="trip_confirm_set_time_button_text">указать время</string>
+    <string name="trip_confirm_set_car_button_text">Укажите машину</string>
+    <string name="trip_confirm_address_text">Адрес:</string>
+    <string name="trip_confirm_address_point_text">Место посадки:</string>
+    <string name="trip_confirm_car_title">Машина</string>
+    <string name="trip_confirm_address_end_point_text">Место высадки:</string>
+    <string name="trip_confirm_address_point_field_hint">Где забирать пассажиров?</string>
+    <string name="trip_confirm_address_end_point_field_hint">Где высадить пассажиров?</string>
+    <string name="plus" translatable="false">+</string>
+    <string name="minus" translatable="false">-</string>
+    <string name="two_points">:</string>
+
 </resources>
