--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -136,6 +136,9 @@
     <string name="profile_edit_save_button_text">Сохранить</string>
     <string name="profile_edit_lastname_hint">Фамилия</string>
     <string name="profile_edit_wa_number_hint">Введите номер с кодом страны</string>
-
+    
+    <!--    Мои машины -->
+    <string name="my_cars_toolbar_title">Мои машины</string>
+    <string name="my_cars_add_car_text">добавить машину</string>"
 
 </resources>
