[+] Создан экран списка созданных поездок MyTripsFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -141,4 +141,7 @@
     <string name="my_cars_toolbar_title">Мои машины</string>
     <string name="my_cars_add_car_text">добавить машину</string>"
 
+    <!--    Мои поездки -->
+    <string name="my_trips_toolbar_title">Мои поездки</string>
+
 </resources>
