--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -137,6 +137,7 @@
     <string name="login_finish_dialog_title">Введите код из SMS</string>
     <string name="profile_edit_whatsapp_description">Номер WhatsApp</string>
     <string name="profile_edit_save_button_text">Сохранить</string>
+    <string name="profile_edit_delete_account_button_text">Удалить аккаунт</string>
     <string name="profile_edit_lastname_hint">Фамилия</string>
     <string name="profile_edit_wa_number_hint">Введите номер с кодом страны</string>
 
@@ -144,19 +145,22 @@
     <string name="my_cars_toolbar_title">Мои машины</string>
     <string name="my_cars_add_car_text">добавить машину</string>
     <string name="my_cars_add_car_button_text">Добавить машину</string>
+    <string name="my_cars_no_cars_text">У вас пока нет\nдобавленных машин</string>
 
     <!--    Добавить машину -->
     <string name="add_car_toolbar_title">Добавить машину</string>
-    <string name="new_car_add_button_text">Добавить</string>
+    <string name="new_car_add_button_text">Сохранить</string>
     <string name="new_car_add_car_dialog_title">Добавить машину</string>
     <string name="new_car_add_photo_text">Добавить фото</string>
     <string name="new_car_car_brand_hint">Выберите марку</string>
     <string name="new_car_car_model_hint">Выберите модель</string>
     <string name="new_car_car_year_hint">Год</string>
     <string name="new_car_car_color_hint">Цвет</string>
+    <string name="new_car_car_seats_hint">Мест для пассажиров</string>
 
     <!--    Мои поездки -->
     <string name="my_trips_toolbar_title">Мои поездки</string>
+    <string name="my_trips_no_trips_text">У вас пока нет\nпоездок</string>
 
     <!--    Настройки профиля -->
     <string name="profile_edit_toolbar_title">Настройки профиля</string>
